--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.3.1",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite": "^7.3.1"
   }
 }
